［修复］关闭一开始就显示登录的bug

--- a/css/login.css
+++ b/css/login.css
@@ -28,7 +28,7 @@ body {
     padding: 20px 20px 10px 20px;
 }
 #logging {
-    display: flex;
+    display: none;
     flex-flow: column wrap;
     justify-content: center;
     align-items: center;
