［修复］相关页面修复
1、修复了新功能采用类与对象设计模式；
2、完成了点击出新tab窗口的模式设计；
3、针对frame进行了布局设置，采用了圣杯布局；

--- a/css/main/main.css
+++ b/css/main/main.css
@@ -1,6 +1,13 @@
+body {
+    border-top: 1px solid #CCCCCC;
+}
 #content {
     display: flex;
     flex-flow: column nowrap;
+}
+.area {
+    display: inherit;
+    flex-flow: inherit;
 }
 .option {
     display: inherit;
@@ -41,4 +48,15 @@
 }
 .option input:focus + span {
     display: inline-block;
+}
+
+@media screen and (max-width: 640px) {
+    .option {
+        flex-flow: row wrap;
+        height: 50px;
+    }
+    .option span {
+        padding: 0 100px;
+        width: 100%;
+    }
 }
