［重大更新］更新了页面结构和样式
1、修改页面结构，参考阿里云管理系统设计；
2、修改页面样式设计，参考阿里云管理系统设计；
3、重新规划文件夹结构

--- a/css/reset.css
+++ b/css/reset.css
@@ -3,7 +3,8 @@
 /* Reset css*/
 body, h1, h2, h3, h4, h5, h6, div, hr, p, blockquote, dl, dt, dd, ul, ol, li, pre, form, fieldset, legend, button, input, textarea, th, td {
     margin: 0;
-    padding: 0
+    padding: 0;
+    font-family: "Helvetica Neue", "Luxi Sans", "DejaVu Sans", Tahoma, "Hiragino Sans GB", STHeiti, "Microsoft YaHei"
 }
 
 body {
@@ -74,7 +75,7 @@ table {
 }
 
 .hidden {
-    display: none;
+    display: none !important;
 }
 
 /*a*/
