［重大更新］更新了企业基本信息页面
1、更新了图片上传按钮的弹窗显示；
2、更新了基本信息的设置界面

--- a/css/frame.css
+++ b/css/frame.css
@@ -84,7 +84,7 @@ iframe {
     order: -1;
 }
 .HolyGrail-nav {
-    flex: 0 0 16vw;
+    flex: 0 0 230px;
     background: rgba(57, 69, 85, 1);
 }
 .hidden-nav {
