--- a/css/message.css
+++ b/css/message.css
@@ -7,6 +7,7 @@
     -webkit-user-select: none;
     -moz-user-select: none;
     -ms-user-select: none;
+    color: #000;
 }
 .popMsg {
     display: flex;
@@ -21,9 +22,25 @@
     z-index: 100;
     overflow: auto;
 }
+.popMsg .operation {
+    width: 600px;
+    height: 400px;
+    /*margin: 50px auto 0;*/
+    padding: 20px;
+    background: #ffffff;
+    -webkit-border-radius: 10px;
+    -moz-border-radius: 10px;
+    border-radius: 10px;
+    -webkit-animation: popOperation 0.3s;
+    -o-animation: popOperation 0.3s;
+    animation: popOperation 0.3s;
+}
 .popMsg .tip {
     width: 360px;
-    height: 116px;
+    height: 178px;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
     padding: 20px;
     background: #ffffff;
     -webkit-animation: popTip 0.3s;
@@ -102,6 +119,18 @@
     -o-animation: popWord 0.6s;
     animation: popWord 0.6s;
 }
+@keyframes popOperation {
+    from {
+        width: 200px;
+        height: 100px;
+        /*margin-top: 200px;*/
+    }
+    to {
+        width: 600px;
+        height: 400px;
+        /*margin-top: 50px;*/
+    }
+}
 @keyframes popTip {
     from {
         width: 100px;
@@ -109,7 +138,7 @@
     }
     to {
         width: 360px;
-        height: 116px;
+        height: 178px;
     }
 }
 @keyframes popWord {
