［修复］兼容火狐bug修复
1、火狐下出现了没有自动左对齐的bug，查明发现为需要在position之后用left:0定位

--- a/css/login/login.css
+++ b/css/login/login.css
@@ -66,6 +66,7 @@ body {
     justify-content: center;
     align-items: center;
     margin: 10px 0 0;
+    left: 0;
 }
 #cancelDiv button {
     height: 30px;
