［重大更新］更新了页面刷新方法
1、用hash的方法进行页面渲染和样式刷新；
2、用jQuery则更新了部分代码；

--- a/css/frame.css
+++ b/css/frame.css
@@ -62,9 +62,12 @@ header div {
 .HolyGrail-tag:hover {
     background: #EEEEEE;
 }
-iframe {
+#hash-page {
     width: 100%;
     flex: 1;
+    overflow: auto;
+    top: 50px;
+    bottom: 0;
 }
 
 #nav-hidden {
@@ -112,13 +115,11 @@ iframe {
 }
 .aside-item {
     line-height: 40px;
+    display: flex;
+    flex-flow: row nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
     white-space: nowrap;
-}
-.aside-link {
-    display: flex;
-    flex-flow: row nowrap;
 }
 .item-icon {
     width: 30px;
