--- a/css/list.css
+++ b/css/list.css
@@ -3,13 +3,14 @@
     flex-flow: column nowrap;
     font-size: 12px;
     padding: 0 15px;
+    color: #000000;
 }
-.title {
+.contentTitle {
     padding: 16px 0;
     min-height: 70px;
     box-sizing: border-box;
 }
-.title h5 {
+.contentTitle h5 {
     display: inline-block;
     text-indent: 8px;
     border-left: 2px solid #88B7E0;
