--- a/css/frame.css
+++ b/css/frame.css
@@ -112,6 +112,7 @@ header div {
     background: #ffffff;
 }
 .aside-li:hover {
+    cursor: pointer;
     background: #F4F6F8;
 }
 .aside-item {
@@ -133,10 +134,6 @@ header div {
     flex-flow: row nowrap;
     align-items: center;
     cursor: pointer;
-    user-select: none;
-    -webkit-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
     font-size: 12px;
     height: 5vh;
     line-height: 5vh;
@@ -154,4 +151,11 @@ header div {
     width: 20px;
     height: 20px;
     padding: 0 15px;
+}
+.HolyGrail-button,
+.HolyGrail-aside {
+    user-select: none;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
 }
