--- a/css/frame.css
+++ b/css/frame.css
@@ -159,3 +159,15 @@ header div {
     -moz-user-select: none;
     -ms-user-select: none;
 }
+
+#divCover {
+    position: fixed;
+    display: flex;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background: rgba(0, 0, 0, 0.5);
+    justify-content: center;
+    align-items: center;
+}
