［修复］样式修复
1、修复了textarea的hover不是text的错误

--- a/css/reset.css
+++ b/css/reset.css
@@ -52,8 +52,11 @@ fieldset, img {
 button, input, select, textarea {
     vertical-align: middle
 }
-button, textarea {
+button {
     cursor: pointer
+}
+textarea {
+    cursor: text;
 }
 
 table {
