--- a/css/list.css
+++ b/css/list.css
@@ -121,6 +121,7 @@ i {
     border:1px solid #CCCCCC;
     border-radius: 0;
     padding: 6px 0;
+    text-indent: 10px;
     -webkit-transition: box-shadow 0.3s ease;
     -moz-transition:  box-shadow 0.3s ease;
 }
