--- a/css/list.css
+++ b/css/list.css
@@ -12,6 +12,7 @@
     min-height: 70px;
     box-sizing: border-box;
     font-weight: 500;
+    border-bottom: 1px solid #DDD;
 }
 .contentTitle h5 {
     display: inherit;
@@ -41,6 +42,43 @@
     color: #88B7E0;
     border-color: #88B7E0;
 }
+
+.contentOperation {
+    display: inherit;
+    flex-flow: row wrap;
+    line-height: 50px;
+    align-items: center;
+    justify-content: flex-start;
+}
+.contentOperation label {
+    margin: 0 20px;
+}
+.contentOperation label:first-child {
+    margin: 0 20px 0 0;
+}
+.contentOperation select,
+.contentOperation input {
+    border: 1px solid #CCCCCC;
+    height: 28px;
+    width: 100px;
+    -webkit-border-radius: 0;
+    -moz-border-radius: 0;
+    border-radius: 0;
+    padding: 6px 0;
+    -webkit-transition: box-shadow 0.3s ease;
+    -moz-transition: box-shadow 0.3s ease;
+}
+.contentOperation input {
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+    width: 150px;
+    text-indent: 10px;
+}
+.contentOperation input[type=datetime-local] {
+    text-indent: 0;
+}
+
 i {
     color: #D0021B;
     padding: 0 5px;
@@ -48,6 +86,9 @@ i {
 .area {
     display: inherit;
     flex-flow: inherit;
+}
+.area .contentTitle {
+    border: 0;
 }
 .option, .information {
     display: inherit;
@@ -152,13 +193,10 @@ i {
     font-size: 12px;
     display: none;
 }
-.option input:focus,
-.information input:focus,
-.option button:focus,
-.option select:focus,
-.information select:focus,
-.option textarea:focus,
-.information textarea:focus {
+input:focus,
+button:focus,
+select:focus,
+textarea:focus {
     outline: 0;
     border:#87C6F9 1px solid;
     box-shadow: 0 0 8px rgba(103, 166, 217, 1);
