--- a/css/frame.css
+++ b/css/frame.css
@@ -99,11 +99,12 @@ header div {
 }
 .HolyGrail-aside {
     flex: 0 0 180px;
-    background: #D9DEE4;
+    background: #EAEDF1;
     color: #333333;
     font-size: 12px;
 }
 .HolyGrail-aside span {
+    background: rgb(217, 222, 228);
     line-height: 70px;
     font-weight: bold;
     text-indent: 20px;
